# mycofetch

./: README.org  dune-project  mycofetch.install  mycofetch.opam
_build/: .db  .digest-db
_build/default/: mycofetch.dune-package  mycofetch.install
_build/install/default/lib/mycofetch/: META  dune-package  opam
examples/: pfetch
